# questionable-ai

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: Architecture.md  Roadmap.md
documentation/: docs.json  introduction.mdx
src/mutual_dissent/: __init__.py  cli.py  client.py  config.py  display.py  models.py  orchestrator.py  pricing.py  prompts.py  scoring.py  transcript.py  types.py
src/mutual_dissent/providers/: __init__.py  base.py  openrouter.py
src/mutual_dissent/web/: __init__.py  app.py  colors.py  layout.py
src/mutual_dissent/web/components/: __init__.py  export.py  status_bar.py  transcript_browser.py  transcript_view.py
src/mutual_dissent/web/components/charts/: convergence.py  cost.py  influence.py
src/mutual_dissent/web/pages/: __init__.py  config.py  dashboard.py  debate.py
tests/: __init__.py  test_anthropic_provider.py  test_cli_config.py  test_config.py  test_list_show.py  test_markdown_file.py  test_pricing.py  test_providers.py  test_replay.py  test_research_scaffolding.py  test_router.py  test_scoring.py  test_transcript.py  test_types.py  test_web_charts_convergence.py  test_web_charts_cost.py  test_web_charts_influence.py  test_web_cli.py  test_web_colors.py  test_web_config.py  test_web_debate.py  test_web_export.py  test_web_status_bar.py  test_web_transcript_browser.py  test_web_transcript_view.py
