[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutual-dissent"
version = "0.1.0"
description = "Cross-vendor multi-model debate and consensus engine for AI response distillation"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Richard Spicer", email = "richard@richardspicer.io"},
]
keywords = ["ai", "llm", "debate", "multi-model", "consensus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "nicegui>=3.8.0",
    "tomlkit>=0.13",
]

[project.urls]
Homepage = "https://github.com/q-uestionable-AI/mutual-dissent"
Repository = "https://github.com/q-uestionable-AI/mutual-dissent"
Issues = "https://github.com/q-uestionable-AI/mutual-dissent/issues"

[project.scripts]
mutual-dissent = "mutual_dissent.cli:main"
dissent = "mutual_dissent.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "B",
    "C90",
    "UP",
    "S",
]
ignore = [
    "S101",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
